Limit essaylist prompt to 320px width, prevents wrapping. Fixes #132

--- a/writability/ember/app/styles/app.less
+++ b/writability/ember/app/styles/app.less
@@ -625,6 +625,7 @@ button, input[type="checkbox"] {
 
             .sub-line {
                 .bodyText();
+                width: 320px;
             }
         }
 
